<resources>
    <string name="app_name">Animal Shelter Sosnowiec</string>
    
    <string name="dogs">Dogs</string>
    <string name="cats">Cats</string>


    <!-- LABELS FOR ARRAYS! -->
    <string name="species_dog">Dog</string>
    <string name="species_cat">Cat</string>

    <string name="status_adoptable">Adoptable</string>
    <string name="status_quarantine">Quarantine</string>
    <string name="status_booked">Booked</string>

    <string name="gender_unknown">Unknown</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="height_small">Small</string>
    <string name="height_medium">Medium</string>
    <string name="height_big">Big</string>

    <string name="sterilized_yes">Yes</string>
    <string name="sterilized_no">No</string>
    <!-- LABELS FOR ARRAYS! -->


    <string name="editor_activity_title_new_pet">Add a Pet</string>
    <string name="editor_activity_title_edit_pet">Edit Pet</string>
    <string name="editor_insert_pet_failed">Error with saving pet</string>
    <string name="editor_insert_pet_successful">Pet saved</string>
    <string name="editor_update_pet_failed">Error with updating pet</string>
    <string name="editor_update_pet_successful">Pet updated</string>
    <string name="reservation">Reservation</string>
    <string name="contact_with_keeper">Contact with keeper</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="birth_year">Birth year</string>
    <string name="acceptance_date">Acceptance date</string>
    <string name="sterilized">Sterilized</string>
    <string name="summary">Summary</string>
    <string name="castrated">Castrated</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_pets_found">No pets found</string>
    <string name="delete">Delete</string>
    <string name="delete_pet">Delete pet</string>
    <string name="delete_pet_question">Are you sure you want to delete this pet?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_pet_failed">Deleting pet failed</string>
    <string name="delete_pet_successful">Pet deleted</string>
    <string name="deleting_pet">Deleting pet</string>
    <string name="please_wait">Please wait...</string>
    <string name="editing_pet">Editing pet</string>
    <string name="adding_pet">Adding pet</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="welcome_volunteer">Welcome, volunteer!</string>
    <string name="mail">E-mail</string>
    <string name="register_new_volunteer">Register new volunteer</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="log_out">Log out</string>
    <string name="successfuly_logged_out">Successfuly logged out</string>
    <string name="hello">Hello</string>
    <string name="species">Species</string>
    <string name="status">Status</string>
    <string name="overview">Overview</string>
    <string name="code">Code</string>
    <string name="breed">Breed</string>
    <string name="contact_number">Contact number</string>
    <string name="sterilization">Sterilization</string>
    <string name="email_not_found">Email not found in database</string>
    <string name="wrong_password">Wrong password</string>
    <string name="login_successful">Login successful</string>
    <string name="fill_blank_fields">Fill blank fields</string>
    <string name="code_cant_be_empty">Code is required</string>
    <string name="name_cant_be_empty">Name can\'t be empty</string>
    <string name="summary_cant_be_empty">Summary can\'t be empty</string>
    <string name="birth_year_cant_be_empty">Birth year can\'t be empty</string>
    <string name="acceptance_date_cant_be_empty">Acceptance date can\'t be empty</string>
    <string name="contact_number_cant_be_empty">Contact number can\'t be empty</string>
    <string name="logging">Logging</string>


</resources>
