<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:text="@string/register_new_volunteer"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:textStyle="italic"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:hint="@string/name"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:hint="@string/surname"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginTop="16dp"
            android:text="@string/register"/>

    </LinearLayout>
</RelativeLayout>