<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <pl.radoslawgorczyca.animalsheltersosnowiec.items.GridViewItem
            android:id="@+id/single_animal_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reservation"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/reservation"/>-->

        <Button
            android:id="@+id/contact_with"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/contact_with_keeper" />

        <!--</LinearLayout>-->

        <TextView
            android:id="@+id/single_animal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Borys"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/single_animal_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="01/2018"
            android:textSize="20dp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/single_animal_status_icon"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@mipmap/green_circle" />

            <TextView
                android:id="@+id/single_animal_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="Kwarantanna" />


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="#555555" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp">

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="4dp"
                    android:text="Male" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/height"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="4dp"
                    android:text="Small" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/breed"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/breed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="4dp"
                    android:text="Owczarek niemiecki" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/birth_year"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/birth_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="4dp"
                    android:text="2015" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/acceptance_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/acceptance_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="4dp"
                    android:text="15-12-2017" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/sterilizedTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sterilized"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sterilized"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="4dp"
                    android:text="Yes" />
            </TableRow>
        </TableLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="#555555" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/summary"
            android:textStyle="bold"
            android:paddingLeft="16dp" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:text="To jest miejsce na długi opis dla zwierzęcia przedstawionego w tym miejscu" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="#555555" />

    </LinearLayout>
</ScrollView>